# TestContinuousIntegration

./: .travis.yml  CMakeLists.txt  Main.cxx  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md  appveyor.yml  trigger_build.txt
